test/tests/packages/lets_underscore/underscore.txt
error: package binding `underscorepkg::$u` is not a constant
 --> <packages/underscorepkg/lets.tql>:1:10
  |
1 | let $u = _
  |          ^ 
  |
  = note: package `let` bindings must be constant values
